--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -35,13 +35,13 @@
       <label for="ccNumber">Credit Card #: </label>
       <input type="text" th:field="*{ccNumber}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors(‘ccNumber’)}"
+            th:if="${#fields.hasErrors('ccNumber')}"
             th:errors="*{ccNumber}">CC Num Error</span>
       <br/>
       <label for="ccExpiration">Expiration: </label>
       <input type="text" th:field="*{ccExpiration}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors(‘ccExpiration’)}"
+            th:if="${#fields.hasErrors('ccExpiration')}"
             th:errors="*{ccExpiration}">Expiration Error</span>
       <br/>
       <label for="ccCVV">CVV: </label>
